allow full screen

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 									</p>
 								</header>
 									<!--ITS THE WATCH !! ALSO ADD EMBED-->
-									<iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY?playlist=tgbNymZ7vqY&loop=1">
+									<iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY?playlist=tgbNymZ7vqY&loop=1" allowfullscreen>
 									</iframe>
 									<!--<video width="420" height="345" autoplay>
 										<source src="videos/cat.mp4" type="video/mp4">
