Grammar and spelling mistakes found
posts.html

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 									<p>Our school is located approximately a 10-minute walking distance from Tampines East MRT stations with bus stops infront of the school.	
 									</p>
 									<ul class="actions special">
-										<li><a href="https://dunmansec.moe.edu.sg/contact-us/getting-there" class="button">Full Story</a></li>
+										<li><a href="https://dunmansec.moe.edu.sg/contact-us/getting-there" class="button">getting there</a></li>
 									</ul>
 								</article>
 								<article>
@@ -101,7 +101,7 @@
 									<a href="#" class="image fit"><img src="images/2019 Band.jpg" alt="" /></a>
 									<p>Dunman has a wide range of CCAs to choose from, consisting of Sports and Games, Clubs and Societies, Performing Arts and Uniform Groups.</p>
 									<ul class="actions special">
-										<li><a href="https://dunmansec.moe.edu.sg/our-student-development-programme/cca-programme/performing-arts/concert-band" class="button">Full Story</a></li>
+										<li><a href="https://dunmansec.moe.edu.sg/our-student-development-programme/cca-programme/performing-arts/concert-band" class="button">Discover more</a></li>
 									</ul>
 								</article>
 								<article>
@@ -114,7 +114,7 @@
 									<a href="https://dunmansec.moe.edu.sg/our-academic-programme/english-programme" class="image fit"><img src="images/EnglishCher.jpg" alt="" /></a>
 									<p>Our teachers are amazing and will always be there whenever we need help  to clear our doubts</p>
 									<ul class="actions special">
-										<li><a href="https://dunmansec.moe.edu.sg/our-academic-programme/english-programme" class="button">Full Story</a></li>
+										<li><a href="https://dunmansec.moe.edu.sg/our-academic-programme/english-programme" class="button">Get To Know them</a></li>
 									</ul>
 								</article>
 								<article>
@@ -126,19 +126,19 @@
 									<a href="https://dunmansec.moe.edu.sg/coe-for-innovations-in-science/mission-and-objectives" class="image fit"><img src="images/lavalamp.jpeg" alt="" /></a>
 									<p>To be very honest, Science wasn't a favourite until I joined dmn where I somehow found a love for a subject i was never good at, all thanks to my wonderful teachers !</p>
 									<ul class="actions special">
-										<li><a href="https://dunmansec.moe.edu.sg/coe-for-innovations-in-science/mission-and-objectives" class="button">Full Story</a></li>
+										<li><a href="https://dunmansec.moe.edu.sg/coe-for-innovations-in-science/programmes" class="button">Experience it</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										
-										<h2><a href="#">Stuff around <br />
+										<h2><a href="#">Things around <br />
 										the school</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/subway711.jpg" alt="" /></a>
 									<p>Yes, you heard it right we have a Subway, Dominos and two 7-11, all in walking distance from school </p>
 									<ul class="actions special">
-										<li><a href="https://www.google.com/maps/place/Dunman+Secondary+School/@1.3610555,103.9537371,17z/data=!3m1!4b1!4m5!3m4!1s0x31da3d00da4b0155:0xf05455c308b42605!8m2!3d1.3610555!4d103.9559258" class="button">Full Story</a></li>
+										<li><a href="https://www.google.com/maps/place/Dunman+Secondary+School/@1.3610555,103.9537371,17z/data=!3m1!4b1!4m5!3m4!1s0x31da3d00da4b0155:0xf05455c308b42605!8m2!3d1.3610555!4d103.9559258" class="button">Map</a></li>
 									</ul>
 								</article>
 								<article>
@@ -147,7 +147,7 @@
 										<h2><a href="#">Our Facilities</a></h2>
 									</header>
 									<a href="https://dunmansec.moe.edu.sg/our-school/facilities" class="image fit"><img src="images/Libraryfacility.png" alt="" /></a>
-									<p>The school library ahh the perfect environment to study in !!</p>
+									<p>The school library, the perfect environment to study in. Equiped with tables and chairs, a "grassfeild", and even rooms to study or discuss if you have a project. </p>
 									<ul class="actions special">
 										<li><a href="https://dunmansec.moe.edu.sg/our-school/facilities" class="button">Full Story</a></li>
 									</ul>
