--- a/index.html
+++ b/index.html
@@ -68,13 +68,12 @@
 									</p>
 								</header>
 									<!--ITS THE WATCH !! ALSO ADD EMBED-->
-									<iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY?playlist=tgbNymZ7vqY&loop=1" allowfullscreen>
+									<iframe width="420" height="345" src="https://www.youtube.com/embed/QI3IS0BLIjo" allowfullscreen>
 									</iframe>
-									<!--<video width="420" height="345" autoplay>
-										<source src="videos/cat.mp4" type="video/mp4">
-										
+									<!-- <video width="420" height="300" controls>
+										<source src="videos/video.mp4" type="video/mp4">
 									  Your browser does not support the video tag.
-									  </video>-->
+									  </video>>-->
 								
 							</article>
 
