--- a/posts.html
+++ b/posts.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Dunman Sec</title>
+		<title>2020 Events</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
